Update deployment configuration for GitHub Pages
Updated the `homepage` URL and `deploy` script in `package.json` to align with changes in the project setup. Added a `base` configuration in `vite.config.js` to support the proper deployment path.

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# Adresse de base de l'API
-VITE_API_BASE_URL=https://working-buffy-alexandrelacour-004b5326.koyeb.app
+# URL de base pour l'API
+VITE_API_BASE_URL=https://portfolio-frontend-p2tt-azmizi5v6-alexandrelacour04s-projects.vercel.app
