--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
 {
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
+  "rewrites": [
+    { "source": "/timeline", "destination": "/" },
+    { "source": "/admin", "destination": "/" }
   ]
 }
