``` Simplify Vercel rewrites to a single catch-all rule.
Replaced specific rewrite rules with a single catch-all rule to forward all paths to the root. This improves maintainability and reduces redundancy in the configuration.
```

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
   "rewrites": [
-    { "source": "/timeline", "destination": "/" },
-    { "source": "/admin", "destination": "/" }
+    {
+      "source": "/:path*",
+      "destination": "/"
+    }
   ]
 }
