Refactor theme and UI for dynamic toggling and responsiveness
Implemented theme mode toggling (light/dark) using `useState` in `ThemeProvider`. Enhanced the layout with responsive containers and updated styles for better UX. Removed redundant code and updated dependencies to align with new theme functionality.

--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-# Adresse de base de l'API
-VITE_API_BASE_URL=https://working-buffy-alexandrelacour-004b5326.koyeb.app
+VITE_API_BASE_URL=http://localhost:8081
