--- a/package.json
+++ b/package.json
@@ -15,27 +15,28 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@mui/icons-material": "^6.4.5",
+    "@mui/icons-material": "^6.4.11",
     "@mui/lab": "^6.0.0-beta.28",
-    "@mui/material": "^6.4.5",
+    "@mui/material": "^6.4.11",
     "@mui/x-data-grid": "^7.27.1",
     "@toolpad/core": "^0.12.0",
     "axios": "^1.8.1",
     "dayjs": "^1.11.13",
     "prop-types": "^15.8.1",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-color": "^2.19.3",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.2.0",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.6.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "^18.3.21",
+    "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react": "^7.37.4",
